<resources>
    <string name="app_name">C196 Performance Assessment Thais Ribeiro</string>
    <string name="save_txt">Save</string>
    <string name="cancel_txt">Cancel</string>
    <string name="share_note">Share Note</string>
    <string name="edit_txt">Edit</string>
    <string name="add_term">Add Term</string>
    <string name="add_course">Add Course</string>
    <string name="add_note">Add Note</string>
    <string name="delete_term">Delete Term</string>
    <string name="delete_course">Delete Course</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_assignment">Delete Assignment</string>
    <string name="view_course">View Course</string>
    <string name="view_note">View Note</string>
    <string name="view_term">View Term</string>
    <string name="view_assignment">View Assignment</string>
    <string name="view_all_terms">View All Terms</string>

    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="title">Title:</string>
    <string name="information">Information:</string>
    <string name="course_title">Course Title:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="number">Number:</string>
    <string name="type">Type:</string>
    <string name="note">Notes</string>
    <string name="term_title">Term Title:</string>
    <string name="ci_name">Instructor Name:</string>

    <string name="courses_section">Courses</string>
    <string name="assessments_section">Assessments</string>

    <string name="term_name_placeholder">Term Name</string>
    <string name="course_name_placeholder">Course Name</string>

    <string name="assessment_title_hint">Project</string>
    <string name="class_title_hint">Android Development </string>
    <string name="date_hint">yyyy-MM-dd</string>
    <string name="course_info_hint">course info</string>
    <string name="email_hint">thais@wgu.edu</string>
    <string name="number_hint">123-456-7890</string>
    <string name="ci_name_hint">Bob Smith</string>
    <string name="term_title_hint">Term 1</string>
    <string name="write_note_here_hint">Write note here</string>
    <string name="add_details_hint">add details</string>

    <string name="menu_update_term">Update Term</string>
    <string name="menu_add_note">Add Note</string>
    <string name="menu_add_assessment">Add Assessment</string>
    <string name="menu_update_course">Update Course</string>
    <string name="menu_notify_for_start_date">Notify for Start Date</string>
    <string name="menu_notify_for_end_date">Notify for End Date</string>

    <string name="list_item">List Item</string>
    <string name="create_instructor_note">Note: Add Instructor if no names populate or cannot find instructors name</string>
    <string name="create_instructor">Add Instructor</string>
    <string name="view_all_cis">View All Instructors</string>
    <string name="view_ci">View Instructor</string>
    <string name="delete_ci">Delete Instructor</string>
    <string name="back_tx">Back</string>

</resources>