<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_update_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_update_course" />
    <item
        android:id="@+id/menu_add_assessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_add_assessment" />
    <item
        android:id="@+id/menu_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_add_note" />
    <item
        android:id="@+id/menu_notify_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_notify_for_start_date"
        android:tooltipText="@string/menu_notify_for_end_date" />
    <item
        android:id="@+id/menu_notify_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_notify_for_end_date" />
</menu>