<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.c196_performanceassessment_thaisribeiro.Controller.CreateActivity.CUTermActivity"
    tools:layout_editor_absoluteX="-2dp"
    tools:layout_editor_absoluteY="-5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/term_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/create_term_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/term_title_hint"
                android:inputType="text"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_date"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/create_term_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/date_hint"
                android:inputType="date"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_date"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/create_term_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/date_hint"
                android:inputType="date"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/create_term_btn"
        android:layout_width="191dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save_txt"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/create_term_cancel_btn"
        android:layout_width="128dp"
        android:layout_height="73dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cancel_txt"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toEndOf="@+id/create_term_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>