<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.c196_performanceassessment_thaisribeiro.Controller.CreateActivity.CUNoteActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:text="@string/note"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_note_details"
        android:layout_width="413dp"
        android:layout_height="230dp"
        android:layout_marginTop="40dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/write_note_here_hint"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/create_cancel_btn"
        android:layout_width="134dp"
        android:layout_height="74dp"
        android:layout_marginBottom="28dp"
        android:text="@string/cancel_txt"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toEndOf="@+id/create_note_btn" />

    <Button
        android:id="@+id/create_note_btn"
        android:layout_width="177dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/save_txt"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>