<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.c196_performanceassessment_thaisribeiro.Controller.ListActivity.LOfTermsActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_of_terms_list"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/list_of_terms_add_term_btn"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginBottom="28dp"
        android:text="@string/add_term"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/list_of_terms_delete_term_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/delete_term"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toEndOf="@+id/list_of_terms_view_term_btn"
        app:layout_constraintTop_toBottomOf="@+id/list_of_terms_list" />

    <Button
        android:id="@+id/list_of_terms_view_term_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/view_term"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_of_terms_list" />
</androidx.constraintlayout.widget.ConstraintLayout>